--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "engines": {
     "node": "10.x"
   },
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node server.js",
     "test": "node test.js"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "express-session": "^1.16.2",
     "pg": "^7.11.0"
   },
   "devDependencies": {
